[project]
name = "inim_prime_api"
version = "0.1.1"
description = "Async Python client for INIM Prime alarm panels"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPLv3" }
authors = [
    { name = "Pitscheider", email = "pitscheider@tuta.com" }
]
keywords = ["inim", "alarm", "panel", "async", "home-automation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Home Automation",
]

dependencies = [
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.20.0",
    "python-dotenv>=1.0",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.5",
]

[build-system]
requires = ["setuptools>=65.5", "wheel"]
build-backend = "setuptools.build_meta"
